--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Mukesh Mandal</title>
   <meta name="keywords" content="Mukesh Mandal, Mukesh, Mandal, Mr Mukesh"/>
-  <meta name="description" content="Pikai Mandal is the founder &amp; CEO at Nila Network. He is a crypto enthusiast and an entrepreneur. He studied BS in Computer Science from University of Calcutta."/>
+  <meta name="description" content="Mukesh Mandal is the founder &amp; CEO at mukeshmandal.me. He is a crypto enthusiast and an entrepreneur or a web developer. He studied BA in Bengali Honours from University of Calcutta."/>
   <link rel="stylesheet" href="style.css">
   <link rel="icon" href="/PikaiMandal.png"/>
   <script src="https://kit.fontawesome.com/d37c5443c6.js" crossorigin="anonymous"></script>
@@ -20,27 +20,27 @@
       <img src="/PikaiMandal.png" alt="Pikai Mandal Photo">
       <div class="title">
         <h1>Mukesh Mandal</h1>
-        <h3>BS in Computer Science</h3>
+        <h3>BA bengali honours</h3>
         <p>University of Calcutta</p>
 
         <!-- Icons -->
-        <a title="Twitter" class="link-icon" target="_blank" href="https://twitter.com/mrpikai">
+        <a title="Twitter" class="link-icon" target="_blank" href="https://twitter.com/mrmukeshmandal">
           <i class="fab fa-twitter"></i>
         </a>
 
-        <a title="GitHub" class="link-icon" target="_blank" href="https://github.com/pikaimandal">
+        <a title="GitHub" class="link-icon" target="_blank" href="https://github.com/mrmukeshmandal">
           <i class="fab fa-github-square"></i>
         </a>
 
-        <a title="Linkedin" class="link-icon" target="_blank" href="https://www.linkedin.com/in/pikaimandal/">
+        <a title="Linkedin" class="link-icon" target="_blank" href="#/">
           <i class="fab fa-linkedin"></i>
         </a>
 
-        <a title="FaceBook" class="link-icon" target="_blank" href="https://www.facebook.com/mrpikaimandal">
+        <a title="FaceBook" class="link-icon" target="_blank" href="https://www.facebook.com/mukesh.mondal.7796?mibextid=ZbWKwL">
           <i class="fab fa-facebook-square"></i>
         </a>
  
-        <a title="Contact" class="link-icon" target="_blank" href="mailto:contact@pikaimandal.com">
+        <a title="Mail" class="link-icon" target="_blank" href="mailto:mail@mukeshmandal.me">
           <i class="fas fa-envelope-square"></i>
         </a>        
       </div>
