--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Mukesh Mandal</title>
-  <meta name="keywords" content="Mukesh Mandal, Mukesh, Mandal, Mr Mukesh"/>
+  <meta name="keywords" content="www.mukeshmandal.me, Mukesh Mandal, Mukesh, Mandal, Mr Mukesh"/>
   <meta name="description" content="Mukesh Mandal is the founder &amp; CEO at mukeshmandal.me. He is a crypto enthusiast and an entrepreneur or a web developer. He studied BA in Bengali Honours from University of Calcutta."/>
   <link rel="stylesheet" href="style.css">
-  <link rel="icon" href="/PikaiMandal.png"/>
+  <link rel="icon" href="/#"/>
   <script src="https://kit.fontawesome.com/d37c5443c6.js" crossorigin="anonymous"></script>
 
 </head>
@@ -17,7 +17,7 @@
 
   <div class="container">
     <header class="perfil">
-      <img src="/PikaiMandal.png" alt="Pikai Mandal Photo">
+      <img src="#/" alt="#">
       <div class="title">
         <h1>Mukesh Mandal</h1>
         <h3>BA bengali honours</h3>
