--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Mukesh Mandal</title>
   <meta name="keywords" content="www.mukeshmandal.me, Mukesh Mandal, Mukesh, Mandal, Mr Mukesh"/>
-  <meta name="description" content="Mukesh Mandal is the founder &amp; CEO at mukeshmandal.me. He is a crypto enthusiast and an entrepreneur or a web developer. He studied BA in Bengali Honours from University of Calcutta."/>
+  <meta name="description" content="Mukesh Mandal is currently studying Bachelor of Arts from Sonarpur College affiliated to University of Calcutta. He loves cryptocurrencies"/>
   <link rel="stylesheet" href="style.css">
   <link rel="icon" href="/#"/>
   <script src="https://kit.fontawesome.com/d37c5443c6.js" crossorigin="anonymous"></script>
@@ -20,7 +20,7 @@
       <img src="#/" alt="#">
       <div class="title">
         <h1>Mukesh Mandal</h1>
-        <h3>BA bengali honours</h3>
+        <h3>Bachelor in Arts</h3>
         <p>University of Calcutta</p>
 
         <!-- Icons -->
@@ -52,7 +52,6 @@
         <h4>I'm currently working on:</h4>
         <p class="line-1 anim-typewriter"></p>
         <ol>
-          <li><a href="https://intrip.co/" target="blank">   Intrip</a></li>
           <li><a href="#"> 💰##########</a></li>
           <li><a href="#"> 💰##########</a></li>
           <li><a href="#"> 💰##########</a></li>
