--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <div class="container">
     <header class="perfil">
-      <img src="#/" alt="#">
+      <img src="/MukeshMandal.png" alt="#">
       <div class="title">
         <h1>Mukesh Mandal</h1>
         <h3>Bachelor in Arts</h3>
